tests/toylang/neg/001653_mutation.toylang
program a = { while a a sleep; } .
